[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/panel3.png" type="Texture" id=1]
[ext_resource path="res://Assets/panel2.png" type="Texture" id=2]
[ext_resource path="res://Assets/button1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/LevelsScript.gd" type="Script" id=4]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=5]
[ext_resource path="res://Assets/home.png" type="Texture" id=6]
[ext_resource path="res://Assets/ballLogo.png" type="Texture" id=7]
[ext_resource path="res://Assets/scoreBubble.png" type="Texture" id=8]
[ext_resource path="res://font1.tres" type="DynamicFont" id=9]
[ext_resource path="res://Sounds/buttonHover.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/panel4.png" type="Texture" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.002
anchor_bottom = 1.0
margin_right = -0.0439453
margin_bottom = 2.0
color = Color( 0.14902, 0.12549, 0.12549, 1 )

[node name="Panel" type="Sprite" parent="BackGround"]
visible = false
self_modulate = Color( 0.109804, 0.329412, 0.396078, 1 )
position = Vector2( 539, 46 )
texture = ExtResource( 1 )

[node name="LevelPanel" type="Sprite" parent="BackGround"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 452, 326 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Lvl1Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.083
anchor_top = 0.115
anchor_right = 0.229
anchor_bottom = 0.343
margin_left = -366.922
margin_top = -190.93
margin_right = -367.086
margin_bottom = -191.026
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl1Button"]
position = Vector2( 54, 33 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl1Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl1Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl1Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "1"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl1Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl2Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.3
anchor_top = 0.118
anchor_right = 0.446
anchor_bottom = 0.346
margin_left = -367.2
margin_top = -191.076
margin_right = -367.364
margin_bottom = -191.172
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl2Button"]
position = Vector2( 54, 33 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl2Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl2Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl2Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "2"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl2Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl3Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.53
anchor_top = 0.12
anchor_right = 0.676
anchor_bottom = 0.348
margin_left = -367.02
margin_top = -190.84
margin_right = -367.184
margin_bottom = -190.936
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl3Button"]
position = Vector2( 54, 33 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl3Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl3Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl3Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "3"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl3Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl4Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.762
anchor_top = 0.126
anchor_right = 0.907
anchor_bottom = 0.353
margin_left = -367.308
margin_top = -191.132
margin_right = -366.738
margin_bottom = -190.846
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl4Button"]
position = Vector2( 54, 33 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl4Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl4Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl4Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "4"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl4Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl5Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.082
anchor_top = 0.552
anchor_right = 0.228
anchor_bottom = 0.78
margin_left = -367.188
margin_top = -190.864
margin_right = -367.352
margin_bottom = -190.96
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl5Button"]
position = Vector2( 54, 53 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl5Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl5Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl5Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "5"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl5Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl6Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.302
anchor_top = 0.55
anchor_right = 0.448
anchor_bottom = 0.777
margin_left = -366.668
margin_top = -191.1
margin_right = -366.832
margin_bottom = -190.814
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl6Button"]
position = Vector2( 54, 53 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl6Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl6Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl6Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "6"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl6Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl7Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.529
anchor_top = 0.547
anchor_right = 0.674
anchor_bottom = 0.775
margin_left = -367.286
margin_top = -190.954
margin_right = -366.716
margin_bottom = -191.05
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl7Button"]
position = Vector2( 54, 53 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl7Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl7Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl7Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "7"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl7Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Lvl8Button" type="Button" parent="BackGround/LevelPanel"]
modulate = Color( 1, 1, 1, 0.5 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.767
anchor_top = 0.542
anchor_right = 0.913
anchor_bottom = 0.77
margin_left = -366.978
margin_top = -191.044
margin_right = -367.142
margin_bottom = -191.14
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="BackGround/LevelPanel/Lvl8Button"]
position = Vector2( 54, 53 )
scale = Vector2( 0.84375, 0.6875 )
texture = ExtResource( 3 )

[node name="scoreBubble" type="Sprite" parent="BackGround/LevelPanel/Lvl8Button/Icon"]
position = Vector2( 30, -50 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="BackGround/LevelPanel/Lvl8Button/Icon/scoreBubble"]
anchor_left = 0.047
anchor_top = -0.234
anchor_right = 0.961
anchor_bottom = 0.905
margin_left = -32.008
margin_top = -32.024
margin_right = -25.504
margin_bottom = -23.92
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="lvlNum" type="Label" parent="BackGround/LevelPanel/Lvl8Button/Icon"]
anchor_left = -0.109
anchor_top = -0.172
anchor_right = 1.118
anchor_bottom = 1.111
margin_left = -64.048
margin_top = -63.984
margin_right = -64.104
margin_bottom = -64.208
rect_scale = Vector2( 1.001, 1.001 )
custom_fonts/font = ExtResource( 9 )
text = "8"
align = 1
valign = 1

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/Lvl8Button"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="NextChapterButton" type="Button" parent="BackGround/LevelPanel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.084
anchor_top = 0.887
anchor_right = 1.215
anchor_bottom = 1.092
margin_left = -366.656
margin_top = -190.834
margin_right = -366.81
margin_bottom = -191.144

[node name="Sprite" type="Sprite" parent="BackGround/LevelPanel/NextChapterButton"]
position = Vector2( 48, 49 )
scale = Vector2( 0.75, 0.609375 )
texture = ExtResource( 5 )

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/NextChapterButton"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="HomeButton" type="Button" parent="BackGround/LevelPanel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -426.0
margin_top = -303.0
margin_right = -344.0
margin_bottom = -229.0

[node name="Sprite" type="Sprite" parent="BackGround/LevelPanel/HomeButton"]
position = Vector2( 41, 27 )
scale = Vector2( 0.640625, 0.578125 )
texture = ExtResource( 6 )

[node name="hoverSound" type="AudioStreamPlayer" parent="BackGround/LevelPanel/HomeButton"]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 1.09

[node name="Logo" type="Sprite" parent="BackGround/LevelPanel"]
position = Vector2( 442, -232 )
scale = Vector2( 0.621094, 0.554688 )
texture = ExtResource( 7 )

[node name="Message" type="Sprite" parent="BackGround/LevelPanel"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 468, 124 )
scale = Vector2( 0.626667, 0.816832 )
texture = ExtResource( 11 )

[node name="text" type="Label" parent="BackGround/LevelPanel/Message"]
anchor_left = 0.02
anchor_top = 0.084
anchor_right = 0.972
anchor_bottom = 0.969
margin_left = -144.83
margin_top = -52.5568
margin_right = 188.57
margin_bottom = 47.0582
rect_scale = Vector2( 0.448, 0.448 )
custom_fonts/font = ExtResource( 9 )
text = "Still in development"
align = 1
valign = 1
